# bitcoinanatomy

./: .gitignore  .htaccess  LICENSE  README.md  _headers  index.html  pyproject.toml  script.js  style.css  swiper-bundle.min.css  swiper-bundle.min.js  team.json
.well-known/: nostr.json
3dprint/: index.html
adoptingbitcoin2023/: index.html
assets/: (2) THE ANATOMY OF BITCOIN on Twitter- "Sats at scale src:main.h#L18 static const int64 COIN = 100000000; src:main.cpp#L677 int64 nSubsidy = 50 * COIN; https-::t.co:0beQFDebVd" : Twitter.webloc
assets/adopting_bitcoin_2023/: genesis.tiff
assets/animation/: scenes-animation.ai  scenes-animation_v2.ai
board/: index.html
board/jQuery-Tiles-master/: MIT-LICENSE.txt  package.json
board/v1/: index.html  index_original.html  styles.css
board/v2/: index.html
explorer/: README.md  address.html  block.html  block.js  blockchain.html  blockchain.js  difficulty.html  difficulty.js  home.js  index.html  manifest.json  mempool.html  mempool.js  network.html  node.html  node.js  server.js  style.css  transaction.html  vercel.json
explorer/js/: address.js  bitnodes-snapshot-1772712282.json  block.js  blockchain.js  controls-camera.js  difficulty.js  mempool.js  network.js  node.js  (+1 more)
inscription/: index.html
scenes/: 01_Prologue.json  02_The_Network.json  03_The_Node.json  04_The_Blockchain.json  05_The_Block.json  06_The_Transaction.json  07_The_Signature.json  08_The_Validation.json  09_Epilogue.json
script/: 01_Prologue.json  02_The_Network.json  03_The_Node.json  04_The_Blockchain.json  09_Epilogue.json
(+433 files in other folders)
